--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h1>Hello world</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero iure odio cumque distinctio dicta esse dignissimos aperiam totam commodi. Est.</p>
   </body>
 </html>
